Fix alignment

--- a/assets/scss/module/_forum.scss
+++ b/assets/scss/module/_forum.scss
@@ -62,8 +62,12 @@ i.fab {
 }
 
 .forum-footer {
-	display: flex;
 	width: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-items: flex-start;
+	justify-content: center;
 
 	a {
 		display: flex;
